// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipe Controller - Create should throw validation error when property description is number 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "description must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`Recipe Controller - Create should throw validation error when property name is number 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "name must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`Recipe Controller - Create should throw validation error when property order in preparing is string 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "preparing.0.order must be a number conforming to the specified constraints",
  ],
  "statusCode": 400,
}
`;
